完成登录、注册页面设计和动画效果，未给功能按钮添加点击动作监听的跳转。
Signed-off-by: simonjoker <simon_jinrun@163.com>

--- a/OnRoad/res/values/strings.xml
+++ b/OnRoad/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="regin_login_privacy_policy">隐私政策</string>
     <string name="regin_login_sina">微博</string>
     <string name="regin_login_facebook">Facebook</string>
+    <string name="regin_login_google">谷歌</string>
+    <string name="regin_login_display_more">显示更多</string>
     
     
   
